<resources>
    <string name="app_name">SAMcalendar</string>
    <string name="app_title">SAM\'s Calendar</string>
    <string name="title">SAM\'s Calendar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="eventPrompt">Event</string>
    <string name="datePlaceholder">datePlaceholder</string>
    <string name="locationPrompt">Enter a Location</string>
    <string name="detailsPrompt">Enter Event Details</string>
    <string name="createdBy">Who Created this Event?</string>
    <string name="submitEvent">Submit</string>
    <string name="UpdateEvent">Update</string>
    <string name="RemoveEvent">Delete</string>

</resources>
