<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".AddEvent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <!--Put form controls here-->
        <!--<TextView-->
            <!--android:id="@+id/eventPrompt"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/eventPrompt"-->
            <!--android:textSize="10pt">-->
        <!--</TextView>-->

        <TextView
            android:id="@+id/DateSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datePlaceholder"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/EditLocation"
            android:layout_height="wrap_content"
            android:hint="@string/locationPrompt"
            android:inputType="text"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/EditDetails"
            android:layout_height="wrap_content"
            android:hint="@string/detailsPrompt"
            android:inputType="textMultiLine"
            android:lines="5"
            android:layout_width="fill_parent">
        </EditText>

        <!--<EditText-->
            <!--android:id="@+id/EditUser"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/createdBy"-->
            <!--android:inputType="textPersonName"-->
            <!--android:layout_width="fill_parent">-->
        <!--</EditText>-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ButtonAddEvent"
            android:text="@string/submitEvent"/>
    </LinearLayout>
</ScrollView>
